--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
 
 .App {
   text-align: center;
+  overflow-x: scroll;
+  margin: auto;
 }
 
 .App-logo {
@@ -22,6 +24,11 @@
 
 .App-intro {
   font-size: large;
+}
+
+.S3Line{
+  border-bottom: 1px solid rgb(46, 213, 255);
+  padding: 3px;
 }
 
 @keyframes App-logo-spin {
