--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,12 @@
   padding: 3px;
 }
 
+.btnSquare{
+  padding: 10px;
+  width: 50px;
+  margin: 1px;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
