--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,10 @@
   margin: 1px;
 }
 
+.pointer{
+  cursor : pointer;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
